add change to size based on screen size

--- a/Index.html
+++ b/Index.html
@@ -7,33 +7,40 @@
     <script src="JS.js"></script>
 </head>
 <body>
+<!--Top Nav bar for the primary links-->
     <div class="NavBar1">
         <div class="TopNavContainer">
             <div class="TopNavButtons">
-                <ul>
-                    <li><a href="#">E-MAIL</a></li>
-                    <li><a href="#">E-COURSES</a></li>
-                    <li><a href="#">IKNOW</a></li>
-                    <li><a href="#">ОГЛАСНА ТАБЛА</a></li>
-                    <li><a href="#">НАЈАВА</a></li>
-                    <li><a href="#">HELP</a></li>
+                <ul class="TopNavBarLinks">
+                    <li><a class="limit" href="#">E-MAIL</a></li>
+                    <li><a class="limit" href="#">E-COURSES</a></li>
+                    <li><a class="limit" href="#">IKNOW</a></li>
+                    <li><a class="limit" href="#">ОГЛАСНА ТАБЛА</a></li>
+                    <li><a class="limit" href="#">НАЈАВА</a></li>
+                    <li><a class="limit" href="#">HELP</a></li>
                 </ul>
             </div>
             <div class="LanguageSwitch">
-                <ul>
-                    <li><a href="#">EN</a></li>
+                <ul class="TopNavBarLinks language">
+                    <li><a class="limit" href="#">EN</a></li>
                     <li>|</li>
-                    <li><a href="#">MK</a></li>
+                    <li><a class="limit" href="#">MK</a></li>
                 </ul>
             </div>
         </div>
     </div>
+
+<!--Bottom Nav bar for the secondary links-->
     <div class="NavBar2">
 
     </div>
+
+
     <div class="MainBody">
 
     </div>
+
+
     <div class="EndCard">
 
     </div>
