reworked the look of the site to make it sipler and easier to use

--- a/Index.html
+++ b/Index.html
@@ -5,36 +5,31 @@
     <title>ФИНКИ</title>
     <link rel="stylesheet" href="stylesheet.css">
     <script src="JS.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
 <!--Top Nav bar for the primary links-->
-    <div class="NavBar1">
-        <div class="TopNavContainer">
-            <div class="TopNavButtons">
-                <ul class="TopNavBarLinks">
-                    <li><a class="limit" href="#">E-MAIL</a></li>
-                    <li><a class="limit" href="#">E-COURSES</a></li>
-                    <li><a class="limit" href="#">IKNOW</a></li>
-                    <li><a class="limit" href="#">ОГЛАСНА ТАБЛА</a></li>
-                    <li><a class="limit" href="#">НАЈАВА</a></li>
-                    <li><a class="limit" href="#">HELP</a></li>
-                </ul>
+    <div class="NavBar">
+        <div class="NavBarContainer">
+            <div class="logo">
+                <div>
+                    <img src="images/Kiril.metodij.png">
+                </div>
+                <div class="FinkiLogo">
+                    <img src="images/finki_newlogo_a1_mk.png">
+                </div>
             </div>
-            <div class="LanguageSwitch">
-                <ul class="TopNavBarLinks language">
-                    <li><a class="limit" href="#">EN</a></li>
-                    <li>|</li>
-                    <li><a class="limit" href="#">MK</a></li>
+            <div class="NavBarRight">
+                <ul class="NavBarLinks">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Staff</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
+                <div class="DropDown">☰</div>
             </div>
         </div>
     </div>
-
-<!--Bottom Nav bar for the secondary links-->
-    <div class="NavBar2">
-
-    </div>
-
 
     <div class="MainBody">
 
@@ -45,27 +40,6 @@
 
     </div>
 
-
-
-
-<!--    <div style="background: darkviolet; height: 200px; width: 2000px">-->
-
-<!--    </div>-->
-<!--    <div style="background: black; height: 2000px; width: 2000px">-->
-<!--        <div style="background: blue; height: 1500px; width: 375px; float: left; margin-left: 250px; margin-right: 125px">-->
-
-<!--        </div>-->
-<!--        <div style="background: orange; height: 1500px; width: 1000px; float: left">-->
-<!--            <div style="background: green; height: 500px; width: 750px; margin-left: 125px; margin-top: 250px">-->
-
-<!--            </div>-->
-<!--            <div style="background: red; height: 500px; width: 750px; margin-left: 125px;">-->
-
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div style="background: brown; height:  500px; width: 2000px; float: left">-->
-
-<!--        </div>-->
-<!--    </div>-->
+    <script src="JS.js"></script>
 </body>
 </html>
