--- a/Index.html
+++ b/Index.html
@@ -3,43 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <title>ФИНКИ</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="styles/stylesheet.css">
+    <link rel="stylesheet" href="styles/mainStyleSheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="JS.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-<!--Top Nav bar for the primary links-->
+    <!--Nav bar with links and dropdown capability-->
     <div class="NavBar">
         <div class="NavBarContainer">
             <div class="logo">
                 <div>
-                    <img src="images/Kiril.metodij.png">
+                    <a href="https://ukim.edu.mk"><img class="prevent-select" src="images/Kiril.metodij.png"></a>
                 </div>
                 <div class="FinkiLogo">
-                    <img src="images/finki_newlogo_a1_mk.png">
+                    <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="images/finki_newlogo_a1_mk.png"></a>
                 </div>
             </div>
             <div class="NavBarRight">
                 <ul class="NavBarLinks">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Staff</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a class="prevent-select" href="#">Home</a></li>
+                    <li><a class="prevent-select" href="#">Projects</a></li>
+                    <li><a class="prevent-select" href="#">Staff</a></li>
                 </ul>
-                <div class="DropDown">☰</div>
+                <div class="DropDown prevent-select">☰</div>
             </div>
         </div>
     </div>
 
+    <!--Main body content, to contain all the information-->
     <div class="MainBody">
 
     </div>
 
 
+    <!--End Card for extra information-->
     <div class="EndCard">
+        <div class="Map-location">
+            <div class="MapContainer">
+                <h2 class="MapTitle">Where is FINKI?</h2>
+                <div style="position: relative;">
+                    <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;">
+                        <iframe class="Map" style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 90%; border: 2px solid black;" loading="lazy" allowfullscreen src="https://maps.google.com/maps?q=finki&z=17&output=embed"></iframe>
+                    </div>
+                    <a href="https://testosteronetherapy.org/" rel="noopener" target="_blank" style="position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0,0,0,0); white-space: nowrap; border: 0;">testosteronetherapy.org</a>
+                </div>
+            </div>
+        </div>
+        <div class="ExtraInfo">
+            <div class="orientation">
+                <div class="EndCardLinks">
+                    <a class="prevent-select end-card-links" href="#">Home</a>
+                    <a class="prevent-select end-card-links" href="#">Projects</a>
+                    <a class="prevent-select end-card-links" href="#">Staff</a>
+                </div>
 
+                <div class="CreatorLinks">
+                    <a href="https://github.com/duckpop" class="fa fa-github"></a>
+                    <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
+                </div>
+            </div>
+        </div>
     </div>
-
+    <h1 class="CreatorTag">
+        created by: Blagoja Stojev
+    </h1>
     <script src="JS.js"></script>
 </body>
 </html>
