reworked the header and footer to make them more plesent to look at

--- a/Index.html
+++ b/Index.html
@@ -23,9 +23,18 @@
             </div>
             <div class="NavBarRight">
                 <ul class="NavBarLinks">
-                    <li><a class="prevent-select" href="#">Home</a></li>
-                    <li><a class="prevent-select" href="#">Projects</a></li>
-                    <li><a class="prevent-select" href="#">Staff</a></li>
+                    <li>
+                        <a class="prevent-select" href="#">Home</a>
+                        <div></div>
+                    </li>
+                    <li>
+                        <a class="prevent-select" href="#">Projects</a>
+                        <div></div>
+                    </li>
+                    <li>
+                        <a class="prevent-select" href="#">Staff</a>
+                        <div></div>
+                    </li>
                 </ul>
                 <div class="DropDown prevent-select">☰</div>
             </div>
@@ -37,13 +46,12 @@
 
     </div>
 
-
     <!--End Card for extra information-->
     <div class="EndCard">
         <div class="Map-location">
             <div class="MapContainer">
                 <h2 class="MapTitle">Where is FINKI?</h2>
-                <div style="position: relative;">
+                <div class="Iframe-Container" style="position: relative;">
                     <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;">
                         <iframe class="Map" style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 90%; border: 2px solid black;" loading="lazy" allowfullscreen src="https://maps.google.com/maps?q=finki&z=17&output=embed"></iframe>
                     </div>
@@ -60,13 +68,15 @@
                 </div>
 
                 <div class="CreatorLinks">
+                    <a href="https://www.instagram.com/blagoja_stojev/" class="fa fa-instagram"></a>
                     <a href="https://github.com/duckpop" class="fa fa-github"></a>
+                    <a href="https://www.linkedin.com/in/blagoja-stojev-9b8152316/" class="fa fa-linkedin"></a>
                     <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
                 </div>
             </div>
         </div>
     </div>
-    <h1 class="CreatorTag">
+    <h1 class="EndCard CreatorTag">
         created by: Blagoja Stojev
     </h1>
     <script src="JS.js"></script>
