added staff page about the professor

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <div class="NavBarContainer">
             <div class="logo">
                 <div>
-                    <a href="https://ukim.edu.mk"><img class="prevent-select" src="images-index/Kiril.metodij.png"></a>
+                    <a href="https://ukim.edu.mk"><img class="prevent-select" src="images-other/Kiril.metodij.png"></a>
                 </div>
                 <div class="FinkiLogo">
-                    <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="images-index/finki_newlogo_a1_mk.png"></a>
+                    <a href="https://www.finki.ukim.mk/mk"><img class="prevent-select" src="images-other/finki_newlogo_a1_mk.png"></a>
                 </div>
             </div>
             <div class="NavBarRight">
                 <ul class="NavBarLinks">
                     <li>
-                        <a class="prevent-select" href="#">Home</a>
+                        <a class="prevent-select nav-links" href="index.html">Дома</a>
                         <div></div>
                     </li>
                     <li>
-                        <a class="prevent-select" href="#">Projects</a>
+                        <a class="prevent-select nav-links" href="projects.html">Проекти</a>
                         <div></div>
                     </li>
                     <li>
-                        <a class="prevent-select" href="#">Staff</a>
+                        <a class="prevent-select nav-links" href="staff.html">Кадар</a>
                         <div></div>
                     </li>
                 </ul>
@@ -41,6 +41,7 @@
         </div>
     </div>
     <hr>
+
     <!--Main body content, to contain all the information-->
     <div class="MainBody">
         <div class="main-segment-one">
@@ -59,7 +60,7 @@
             </p>
 
             <div>
-                <img src="images-index/is-slika2.jpg">
+                <img src="images-other/is-slika2.jpg">
                 <p>Слика 1 - Сензори и апликација во рамки на проектот SIARS</p>
             </div>
         </div>
@@ -68,13 +69,13 @@
             <div class="image-stack-container">
                 <div class="image-wrapper-group">
                     <div class="image-wrapper ">
-                        <img src="images-index/is-picture1.jpg" alt="Image 1">
+                        <img src="images-other/is-picture1.jpg" alt="Image 1">
                     </div>
                     <div class="image-wrapper ">
-                        <img src="images-index/is-picture3.jpg" alt="Image 2">
+                        <img src="images-other/is-picture3.jpg" alt="Image 2">
                     </div>
                     <div class="image-wrapper ">
-                        <img src="images-index/ispicture4.jpg" alt="Image 3">
+                        <img src="images-other/ispicture4.jpg" alt="Image 3">
                     </div>
                 </div>
 
@@ -94,7 +95,7 @@
         </div>
 
 <!--        <div class="main-segment-four">-->
-<!--            <img src="images-index/is-slika3.jpg">-->
+<!--            <img src="images-other/is-slika3.jpg">-->
 <!--            <p class="Paragraph">-->
 <!--                Слика 3 – Терапија за деца со аутизам, користење на асистивни апликации кои поддржуваат роботски елементи-->
 <!--            </p>-->
