added projects page with card based display for projects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="MainBody">
         <div class="main-segment-one">
             <h2 class="Headline">
-                ЛАБАРАТОРИСКИ ВЕЖБИ ПО ПРЕДМЕТОТ <b>ИНТЕЛИГЕНТНИ СИСТЕМИ</b>
+                ПРОЕКТИ ПО ПРЕДМЕТОТ <b>ИНТЕЛИГЕНТНИ СИСТЕМИ</b>
             </h2>
             
             <p class="Paragraph">
@@ -118,13 +118,12 @@
         <div class="ExtraInfo">
             <div class="orientation">
                 <div class="EndCardLinks">
-                    <a class="prevent-select end-card-links" href="#">Home</a>
-                    <a class="prevent-select end-card-links" href="#">Projects</a>
-                    <a class="prevent-select end-card-links" href="#">Staff</a>
+                    <a class="prevent-select end-card-links" href="index.html">Дома</a>
+                    <a class="prevent-select end-card-links" href="projects.html">Проекти</a>
+                    <a class="prevent-select end-card-links" href="staff.html">Кадар</a>
                 </div>
 
                 <div class="CreatorLinks">
-                    <a href="https://www.instagram.com/blagoja_stojev/" class="fa fa-instagram"></a>
                     <a href="https://github.com/duckpop" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/blagoja-stojev-9b8152316/" class="fa fa-linkedin"></a>
                     <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
@@ -133,7 +132,7 @@
         </div>
     </div>
     <h1 class="EndCard CreatorTag">
-        created by: Blagoja Stojev
+        Изработено од: Blagoja Stojev
     </h1>
     <script src="JS.js"></script>
 </body>
