--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>ФИНКИ</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
-    <link rel="stylesheet" href="styles/mainStyleSheet.css">
+    <link rel="stylesheet" href="styles/projectsStyleSheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="JS.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -43,7 +43,141 @@
     <hr>
     <!--Main body content, to contain all the information-->
     <div class="MainBody">
+        <div class="year-links">
+            <ul class="ulist-links">
+                <li>
+                    <h2 class="prevent-select">ГОДИНИ</h2>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2025-2026">2025-2026</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2024-2025">2024-2025</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2023-2024">2023-2024</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2022-2023">2022-2023</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2021-2022">2021-2022</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2020-2021">2020-2021</a>
+                    <div></div>
+                </li>
+                <li>
+                    <a class="prevent-select" href="#2019-2020">2019-2020</a>
+                    <div></div>
+                </li>
+            </ul>
+        </div>
 
+        <div class="project-links">
+            <h1 id="2025-2026">2025-2026</h1>
+            <div class="segment">
+                <div class="container-wrapper" data-location="project-01" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <h2>PROJECT #1 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+            </div>
+
+            <h1 id="2024-2025">2024-2025</h1>
+            <div class="segment">
+                <div class="container-wrapper" data-location="project-01" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <h2>PROJECT #1 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+                <div class="container-wrapper" data-location="project-01" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <h2>PROJECT #1 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+            </div>
+
+            <h1 id="2023-2024">2023-2024</h1>
+            <div class="segment">
+                <div class="container-wrapper" data-location="project-01" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
+                    <h2>PROJECT #1 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-02" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-4011849_1280.png)"></div>
+                    <h2>PROJECT #2 NAME</h2>
+                </div>
+
+                <div class="container-wrapper" data-location="project-03" onclick="link(this)">
+                    <div class="image-container" style="background-image: url(images-projects/under-construction-2891888_1280.jpg)"></div>
+                    <h2>PROJECT #3 NAME</h2>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!--End Card for extra information-->
@@ -62,13 +196,12 @@
         <div class="ExtraInfo">
             <div class="orientation">
                 <div class="EndCardLinks">
-                    <a class="prevent-select end-card-links" href="#">Home</a>
-                    <a class="prevent-select end-card-links" href="#">Projects</a>
-                    <a class="prevent-select end-card-links" href="#">Staff</a>
+                    <a class="prevent-select end-card-links" href="index.html">Дома</a>
+                    <a class="prevent-select end-card-links" href="projects.html">Проекти</a>
+                    <a class="prevent-select end-card-links" href="staff.html">Кадар</a>
                 </div>
 
                 <div class="CreatorLinks">
-                    <a href="https://www.instagram.com/blagoja_stojev/" class="fa fa-instagram"></a>
                     <a href="https://github.com/duckpop" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/blagoja-stojev-9b8152316/" class="fa fa-linkedin"></a>
                     <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
@@ -77,7 +210,7 @@
         </div>
     </div>
     <h1 class="EndCard CreatorTag">
-        created by: Blagoja Stojev
+        Изработено од: Blagoja Stojev
     </h1>
     <script src="JS.js"></script>
 </body>
