--- a/staff.html
+++ b/staff.html
@@ -54,7 +54,7 @@
                     <a href=mailto:"ana.madevska@finki.ukim.mk">ana.madevska@finki.ukim.mk</a>
                 </div>
                 <div class="staff-contents">
-                    <p>
+                    <p class="first_letter">
                         Родена е 1967 година во Скопје. Основно и средно образование завршила во Скопје. Во 1991 година дипломирала на Институтот за информатика при ПМФ во Скопје како најдобар дипломиран студент во тековната академска година. На Институтот за информатика почнала и да работи како стручен соработник во 1992 година. Во 1996 година магистрирала на темата „Модификација на повеќеслојни невронски мрежи без повратни врски и нивно изучување“ (магистер по информатички науки), а во 2003-тата ја одбранила докторската дисертација под наслов “Препознавање облици со примена на машините со поддржувачки вектори и повеќеслојните невронски мрежи без повратни врски“ (доктор на информатички науки), на ИИ, ПМФ. Од пролетта 2004 работи како доцент на Институтот за информатика и држи настава по предметите: интелигентни системи, биоинформатика, основи на оперативните системи, основи на програмирање, објектно и визуелно програмирање, методика на информатичката настава, практикум, информациски технологии во образованието. Наставник е и на постдипломските студии по информатика и биологија. Главно подрачје на научен интерес на проф. Мадевска-Богданова е областа на вештачките интелигентни системи - препознавање облици, биоинформатика, податочно рударење, а работи и на формализираното претставување на знаење и на методиката на наставата по информатика. Објавила 40-тина трудови од областите на нејзиниот интерес во книги списанија со импакт фактор, меѓународни списанија и зборници на трудови од меѓународни и домашни конференции. Досега објавила неколку учебни помагала, како и материјали за сите курсеви кои ги одржувала. Била уредник во списанието Бит+, во издание на ИИ. Учествувала во вкупно 7 домашни и 8 меѓународни научноистражувачки проекти. Мадевска-Богданова престојувала на неколку странски универзитети. Ги следела Интернационалната летна школа за когнитивна наука во Софија и ERASMUS програмата за математички методи во технологијата во Антверпен, Белгија. Во рамките на TEMPUS проект имала 3-месечен престој во Лувен, Белгија. Во текот на последните 15 години неколку пати имала стручен престој на Католичкиот универзитет во Лувен, Белгија, и на Мастрихт -универзитетот, Холандија. Била поканет предавач на Универзитетот во Мејн, САД. Во 2003-2005 година била раководител на Компјутерскиот центар на ИИ, а од 2005-2009 година била раководител на Заводот за програмско инженерство и раководела со активностите за промоција на ИИ. Почнувајќи од 2009-та година, таа е Раководител на Институтот за информатика. Член е на Здружението на информатичарите на Македонија и во неколку наврати била претседател на комисии за натпревари. Член е на Европското здружение за невронски мрежи.
                     </p>
                     <a class="more-button" href="https://www.finki.ukim.mk/mk/staff/ana-madevska-bogdanova">
@@ -81,13 +81,12 @@
         <div class="ExtraInfo">
             <div class="orientation">
                 <div class="EndCardLinks">
-                    <a class="prevent-select end-card-links" href="#">Home</a>
-                    <a class="prevent-select end-card-links" href="#">Projects</a>
-                    <a class="prevent-select end-card-links" href="#">Staff</a>
+                    <a class="prevent-select end-card-links" href="index.html">Дома</a>
+                    <a class="prevent-select end-card-links" href="projects.html">Проекти</a>
+                    <a class="prevent-select end-card-links" href="staff.html">Кадар</a>
                 </div>
 
                 <div class="CreatorLinks">
-                    <a href="https://www.instagram.com/blagoja_stojev/" class="fa fa-instagram"></a>
                     <a href="https://github.com/duckpop" class="fa fa-github"></a>
                     <a href="https://www.linkedin.com/in/blagoja-stojev-9b8152316/" class="fa fa-linkedin"></a>
                     <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
@@ -96,7 +95,7 @@
         </div>
     </div>
     <h1 class="EndCard CreatorTag">
-        created by: Blagoja Stojev
+        Изработено од: Blagoja Stojev
     </h1>
     <script src="JS.js"></script>
 </body>
