--- a/projects.html
+++ b/projects.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="JS.js"></script>
     <meta charset="UTF-8">
     <title>ФИНКИ</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="stylesheet" href="styles/projectsStyleSheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="JS.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body>
+<body class="themeChangeNormal">
     <!--Nav bar with links and dropdown capability-->
-    <div class="NavBar">
+    <div class="NavBar themeChangeNormal">
         <div class="NavBarContainer">
             <div class="logo">
                 <div>
@@ -22,17 +22,17 @@
                 </div>
             </div>
             <div class="NavBarRight">
-                <ul class="NavBarLinks">
+                <ul class="NavBarLinks themeChangeNormal">
                     <li>
-                        <a class="prevent-select nav-links" href="index.html">Дома</a>
+                        <a class="prevent-select nav-links themeChangeNormal" href="index.html">Дома</a>
                         <div></div>
                     </li>
                     <li>
-                        <a class="prevent-select nav-links" href="projects.html">Проекти</a>
+                        <a class="prevent-select nav-links themeChangeNormal" href="projects.html">Проекти</a>
                         <div></div>
                     </li>
                     <li>
-                        <a class="prevent-select nav-links" href="staff.html">Кадар</a>
+                        <a class="prevent-select nav-links themeChangeNormal" href="staff.html">Кадар</a>
                         <div></div>
                     </li>
                 </ul>
@@ -43,8 +43,8 @@
     <hr>
     <!--Main body content, to contain all the information-->
     <div class="MainBody">
-        <div class="year-links">
-            <ul class="ulist-links">
+        <div class="year-links themeChangeNormal">
+            <ul class="ulist-links themeChangeNormal">
                 <li>
                     <h2 class="prevent-select">ГОДИНИ</h2>
                 </li>
@@ -79,9 +79,9 @@
             </ul>
         </div>
 
-        <div class="project-links">
+        <div class="project-links themeChangeNormal">
             <h1 id="2025-2026">2025-2026</h1>
-            <div class="segment">
+            <div class="segment themeChangeProjects">
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
                     <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
@@ -109,7 +109,7 @@
             </div>
 
             <h1 id="2024-2025">2024-2025</h1>
-            <div class="segment">
+            <div class="segment themeChangeProjects">
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
                     <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
@@ -161,7 +161,7 @@
             </div>
 
             <h1 id="2023-2024">2023-2024</h1>
-            <div class="segment">
+            <div class="segment themeChangeProjects">
                 <div class="container-wrapper" data-location="project-01" onclick="link(this)">
                     <div class="image-container" style="background-image: url(images-projects/maintenance-2422171_1280.jpg)"></div>
                     <h2>PROJECT #1 NAME</h2>
@@ -181,10 +181,10 @@
     </div>
 
     <!--End Card for extra information-->
-    <div class="EndCard">
+    <div class="EndCard themeChangeEnd">
         <div class="Map-location">
-            <div class="MapContainer">
-                <h2 class="MapTitle">Where is FINKI?</h2>
+            <div class="MapContainer themeChangeNormal">
+                <h2 class="MapTitle">Каде е ФИНКИ?</h2>
                 <div class="Iframe-Container" style="position: relative;">
                     <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;">
                         <iframe class="Map" style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 90%; border: 2px solid black;" loading="lazy" allowfullscreen src="https://maps.google.com/maps?q=finki&z=17&output=embed"></iframe>
@@ -202,16 +202,19 @@
                 </div>
 
                 <div class="CreatorLinks">
-                    <a href="https://github.com/duckpop" class="fa fa-github"></a>
-                    <a href="https://www.linkedin.com/in/blagoja-stojev-9b8152316/" class="fa fa-linkedin"></a>
-                    <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
+                    <a href="https://www.facebook.com/FINKI.ukim.mk/" class="fa fa-facebook"></a>
+                    <a href="https://x.com/FINKIedu" class="fa fa-twitter"></a>
+                    <a href="http://www.linkedin.com/company/faculty-of-computer-science-and-engineering---skopje" class="fa fa-linkedin"></a>
+                    <a href="http://www.youtube.com/user/FINKIedu" class="fa fa-youtube"></a>
+                    <div class="fa fa-moon-o" style="margin-left: auto" onclick="changetheme()"></div>
                 </div>
             </div>
         </div>
     </div>
-    <h1 class="EndCard CreatorTag">
-        Изработено од: Blagoja Stojev
-    </h1>
-    <script src="JS.js"></script>
+    <a class="themeChange" href="https://github.com/duckpop" style="text-decoration: none">
+        <h1 class="EndCard CreatorTag themeChangeEnd">
+            Изработено од: Blagoja Stojev
+        </h1>
+    </a>
 </body>
 </html>
