--- a/staff.html
+++ b/staff.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="JS.js"></script>
     <meta charset="UTF-8">
     <title>ФИНКИ</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
     <link rel="stylesheet" href="styles/staffStyleSheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="JS.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body>
+<body class="themeChangeNormal">
     <!--Nav bar with links and dropdown capability-->
-    <div class="NavBar">
+    <div class="NavBar themeChangeNormal">
         <div class="NavBarContainer">
             <div class="logo">
                 <div>
@@ -22,17 +22,17 @@
                 </div>
             </div>
             <div class="NavBarRight">
-                <ul class="NavBarLinks">
+                <ul class="NavBarLinks themeChangeNormal">
                     <li>
-                        <a class="prevent-select nav-links" href="index.html">Дома</a>
+                        <a class="prevent-select nav-links themeChangeNormal" href="index.html">Дома</a>
                         <div></div>
                     </li>
                     <li>
-                        <a class="prevent-select nav-links" href="projects.html">Прокети</a>
+                        <a class="prevent-select nav-links themeChangeNormal" href="projects.html">Проекти</a>
                         <div></div>
                     </li>
                     <li>
-                        <a class="prevent-select nav-links" href="staff.html">Кадар</a>
+                        <a class="prevent-select nav-links themeChangeNormal" href="staff.html">Кадар</a>
                         <div></div>
                     </li>
                 </ul>
@@ -47,17 +47,17 @@
             <h2>
                 ПРОФЕСОР:
             </h2>
-            <div class="staff-container">
+            <div class="staff-container ">
                 <div class="staff-image">
                     <h3>Професор Доктор Ана Мадевска Богданова</h3>
                     <img src="images-other/prof._d-r_ana_madevska_bogdanova_20721.jpg" alt="profesor">
-                    <a href=mailto:"ana.madevska@finki.ukim.mk">ana.madevska@finki.ukim.mk</a>
+                    <a class="themeChangeNormal" href=mailto:"ana.madevska@finki.ukim.mk">ana.madevska@finki.ukim.mk</a>
                 </div>
                 <div class="staff-contents">
                     <p class="first_letter">
                         Родена е 1967 година во Скопје. Основно и средно образование завршила во Скопје. Во 1991 година дипломирала на Институтот за информатика при ПМФ во Скопје како најдобар дипломиран студент во тековната академска година. На Институтот за информатика почнала и да работи како стручен соработник во 1992 година. Во 1996 година магистрирала на темата „Модификација на повеќеслојни невронски мрежи без повратни врски и нивно изучување“ (магистер по информатички науки), а во 2003-тата ја одбранила докторската дисертација под наслов “Препознавање облици со примена на машините со поддржувачки вектори и повеќеслојните невронски мрежи без повратни врски“ (доктор на информатички науки), на ИИ, ПМФ. Од пролетта 2004 работи како доцент на Институтот за информатика и држи настава по предметите: интелигентни системи, биоинформатика, основи на оперативните системи, основи на програмирање, објектно и визуелно програмирање, методика на информатичката настава, практикум, информациски технологии во образованието. Наставник е и на постдипломските студии по информатика и биологија. Главно подрачје на научен интерес на проф. Мадевска-Богданова е областа на вештачките интелигентни системи - препознавање облици, биоинформатика, податочно рударење, а работи и на формализираното претставување на знаење и на методиката на наставата по информатика. Објавила 40-тина трудови од областите на нејзиниот интерес во книги списанија со импакт фактор, меѓународни списанија и зборници на трудови од меѓународни и домашни конференции. Досега објавила неколку учебни помагала, како и материјали за сите курсеви кои ги одржувала. Била уредник во списанието Бит+, во издание на ИИ. Учествувала во вкупно 7 домашни и 8 меѓународни научноистражувачки проекти. Мадевска-Богданова престојувала на неколку странски универзитети. Ги следела Интернационалната летна школа за когнитивна наука во Софија и ERASMUS програмата за математички методи во технологијата во Антверпен, Белгија. Во рамките на TEMPUS проект имала 3-месечен престој во Лувен, Белгија. Во текот на последните 15 години неколку пати имала стручен престој на Католичкиот универзитет во Лувен, Белгија, и на Мастрихт -универзитетот, Холандија. Била поканет предавач на Универзитетот во Мејн, САД. Во 2003-2005 година била раководител на Компјутерскиот центар на ИИ, а од 2005-2009 година била раководител на Заводот за програмско инженерство и раководела со активностите за промоција на ИИ. Почнувајќи од 2009-та година, таа е Раководител на Институтот за информатика. Член е на Здружението на информатичарите на Македонија и во неколку наврати била претседател на комисии за натпревари. Член е на Европското здружение за невронски мрежи.
                     </p>
-                    <a class="more-button" href="https://www.finki.ukim.mk/mk/staff/ana-madevska-bogdanova">
+                    <a class="more-button themeChangeEnd" href="https://www.finki.ukim.mk/mk/staff/ana-madevska-bogdanova">
                         Дознај повеќе
                     </a>
                 </div>
@@ -66,10 +66,10 @@
     </div>
 
     <!--End Card for extra information-->
-    <div class="EndCard">
+    <div class="EndCard themeChangeEnd">
         <div class="Map-location">
-            <div class="MapContainer">
-                <h2 class="MapTitle">Where is FINKI?</h2>
+            <div class="MapContainer themeChangeNormal">
+                <h2 class="MapTitle">Каде е ФИНКИ?</h2>
                 <div class="Iframe-Container" style="position: relative;">
                     <div style="position: relative; padding-bottom: 75%; height: 0; overflow: hidden;">
                         <iframe class="Map" style="position: absolute; top: 2.5%; left: 2.5%; width: 95%; height: 90%; border: 2px solid black;" loading="lazy" allowfullscreen src="https://maps.google.com/maps?q=finki&z=17&output=embed"></iframe>
@@ -87,16 +87,19 @@
                 </div>
 
                 <div class="CreatorLinks">
-                    <a href="https://github.com/duckpop" class="fa fa-github"></a>
-                    <a href="https://www.linkedin.com/in/blagoja-stojev-9b8152316/" class="fa fa-linkedin"></a>
-                    <a href="https://duckpop.github.io/web-page-homework/" class="fa fa-rss"></a>
+                    <a href="https://www.facebook.com/FINKI.ukim.mk/" class="fa fa-facebook"></a>
+                    <a href="https://x.com/FINKIedu" class="fa fa-twitter"></a>
+                    <a href="http://www.linkedin.com/company/faculty-of-computer-science-and-engineering---skopje" class="fa fa-linkedin"></a>
+                    <a href="http://www.youtube.com/user/FINKIedu" class="fa fa-youtube"></a>
+                    <div class="fa fa-moon-o" style="margin-left: auto" onclick="changetheme()"></div>
                 </div>
             </div>
         </div>
     </div>
-    <h1 class="EndCard CreatorTag">
-        Изработено од: Blagoja Stojev
-    </h1>
-    <script src="JS.js"></script>
+    <a class="themeChange" href="https://github.com/duckpop" style="text-decoration: none">
+        <h1 class="EndCard CreatorTag themeChangeEnd">
+            Изработено од: Blagoja Stojev
+        </h1>
+    </a>
 </body>
 </html>
