--- a/projects/project-02.html
+++ b/projects/project-02.html
@@ -35,6 +35,9 @@
                     <a class="prevent-select nav-links themeChangeNormal" href="../staff.html">Кадар</a>
                     <div></div>
                 </li>
+                <li>
+                    <a class="fa fa-moon-o" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                </li>
             </ul>
             <div class="DropDown prevent-select">☰</div>
         </div>
@@ -128,7 +131,6 @@
                 <a href="https://x.com/FINKIedu" class="fa fa-twitter"></a>
                 <a href="http://www.linkedin.com/company/faculty-of-computer-science-and-engineering---skopje" class="fa fa-linkedin"></a>
                 <a href="http://www.youtube.com/user/FINKIedu" class="fa fa-youtube"></a>
-                <div class="fa fa-moon-o" style="margin-left: auto" onclick="changetheme()"></div>
             </div>
         </div>
     </div>
