--- a/projects/project-03.html
+++ b/projects/project-03.html
@@ -37,6 +37,7 @@
                 </li>
                 <li>
                     <a class="fa fa-moon-o" id="themeControl" style="margin-left: auto" onclick="changetheme()"></a>
+                    <div></div>
                 </li>
             </ul>
             <div class="DropDown prevent-select">☰</div>
